# svg2raster

./: CMakeLists.txt  README.txt  svg2raster.sln
cmake/: dependencies.cmake  flags.cmake  graphicsmagick.cmake  graphicsmagick.sh  paths.cmake
svg2raster/: CMakeLists.txt  README.txt  command_line_args.cpp  command_line_args.h  image_converter.h  ipc_cache.h  lru_cache.h  stdafx.cpp  stdafx.h  svg2raster.cpp  svg2raster.vcxproj  svg2raster.vcxproj.filters
unit-tests/: CMakeLists.txt  stdafx.cpp  stdafx.h  unit-tests.cpp  unit-tests.vcxproj  unit-tests.vcxproj.filters
